<resources>
    <string name="app_name">MyMiniSlot</string>
    <string name="MiniSlotGame">ミニスロットゲーム</string>
    <string name="reset">手持ちRESET</string>
    <string name="have_coin_text">手持ちコイン：</string>
    <string name="have_coin">1000</string>
    <string name="start_text">スタート</string>
    <string name="stop">STOP</string>
    <string name="back">戻る</string>
    <string name="bet_coin_down">賭け金DOWN</string>
    <string name="bet_coin_up">賭け金UP</string>
    <string name="bet_coin_text">賭け金：</string>
    <string name="bet_coin">10</string>
</resources>
